--- a/Publisher/Publisher.csproj
+++ b/Publisher/Publisher.csproj
@@ -28,4 +28,8 @@
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0-rc.1.21451.13" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Shared\Shared.csproj" />
+	</ItemGroup>
+
 </Project>
