--- a/Consumer/Consumer.csproj
+++ b/Consumer/Consumer.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="MassTransit.ActiveMQ" Version="7.2.3-develop.260" />
     <PackageReference Include="MassTransit.AspNetCore" Version="7.2.2" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0-rc.1.21451.13" />
+    <PackageReference Include="Serilog.Extensions.Hosting" Version="4.1.2" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
   </ItemGroup>
 
   <ItemGroup>
